Grease Pencil and Camera View #59595

Closed
opened 2018-12-19 01:25:20 +01:00 by Hannes Neumann · 3 comments

System Information
Operating system: Windwos 8.1
Graphics card: Nvidia gtx 1070

Blender Version
Broken:
( 2.80b beta)
( 2.80, 8839152abf, blender2.8, 2018-12-18)

Short description of error
When using the grease pencil with an active camera view the drawing plane is not aligned to the camera(drawing plane view is selected). In some situations only by a small degree in others totaly off( like more then 60 degree difference)
Exact steps for others to reproduce the error

a rotation where it occurs(0,-180,0):
Set Camera to x:0 y:-180 and z:0 degree, press num 0, paint some strokes, num0, check

Just a thought:could this be related to viewport and camera pixel ratios differences?

**System Information** Operating system: Windwos 8.1 Graphics card: Nvidia gtx 1070 **Blender Version** Broken: ( 2.80b beta) ( 2.80, 8839152abf5, blender2.8, 2018-12-18) **Short description of error** When using the grease pencil with an active camera view the drawing plane is not aligned to the camera(drawing plane view is selected). In some situations only by a small degree in others totaly off( like more then 60 degree difference) **Exact steps for others to reproduce the error** a rotation where it occurs(0,-180,0): Set Camera to x:0 y:-180 and z:0 degree, press num 0, paint some strokes, num0, check Just a thought:could this be related to viewport and camera pixel ratios differences?
Author

Added subscriber: @Hansel2k

Added subscriber: @Hansel2k
Antonio Vazquez self-assigned this 2018-12-19 11:23:15 +01:00

This issue was referenced by 1fc75dbbce

This issue was referenced by 1fc75dbbceead7316095089ef15551a1d4fdd11f

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#59595
No description provided.